--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,8 @@ name: Publish to PyPI and Docker Hub
 
 on:
   push:
+    paths:
+      - 'setup.py'  # Only trigger when setup.py is changed
     branches:
       - main  # Adjust to the branches you want to trigger releases
   workflow_dispatch:
@@ -44,16 +46,6 @@ jobs:
           pip install --index-url https://test.pypi.org/simple/ uglypy --extra-index-url https://pypi.org/simple
 
       - name: Publish package to PyPI
-        if: |
-          github.event_name == 'push' &&
-          github.ref == 'refs/heads/main' &&
-          !contains(github.event.head_commit.message, 'pylint') &&
-          !contains(github.event.head_commit.message, 'dependabot') &&
-          !contains(github.event.head_commit.message, 'CodeQL') &&
-          !contains(github.event.head_commit.message, 'chore') &&
-          !contains(github.event.head_commit.message, 'ci') &&
-          !contains(github.event.head_commit.message, '.md') &&
-          !contains(github.event.head_commit.message, '.txt')
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
@@ -61,16 +53,6 @@ jobs:
           twine upload dist/*
 
       - name: Create GitHub Release
-        if: |
-          github.event_name == 'push' &&
-          github.ref == 'refs/heads/main' &&
-          !contains(github.event.head_commit.message, 'pylint') &&
-          !contains(github.event.head_commit.message, 'dependabot') &&
-          !contains(github.event.head_commit.message, 'CodeQL') &&
-          !contains(github.event.head_commit.message, 'chore') &&
-          !contains(github.event.head_commit.message, 'ci') &&
-          !contains(github.event.head_commit.message, '.md') &&
-          !contains(github.event.head_commit.message, '.txt')
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
@@ -84,33 +66,31 @@ jobs:
           draft: false
           prerelease: false
 
+  docker_deploy:
+    runs-on: ubuntu-latest
+    needs: release  # Ensures this job runs after the 'release' job
+
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v3
+
+      - name: Extract version from setup.py
+        id: extract_version
+        run: |
+          VERSION=$(python -c "import re; version_line = next(line for line in open('setup.py') if line.strip().startswith('version=')); print(re.search(r'version=[\"\\']([^\"\\']+)[\"\\']', version_line).group(1))")
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+        shell: bash
+
       - name: Build Docker image
-        if: |
-          github.event_name == 'push' &&
-          github.ref == 'refs/heads/main' &&
-          !contains(github.event.head_commit.message, 'pylint') &&
-          !contains(github.event.head_commit.message, 'dependabot') &&
-          !contains(github.event.head_commit.message, 'CodeQL') &&
-          !contains(github.event.head_commit.message, 'chore') &&
-          !contains(github.event.head_commit.message, 'ci') &&
-          !contains(github.event.head_commit.message, '.md') &&
-          !contains(github.event.head_commit.message, '.txt')
         run: |
           docker build -t fabriziosalmi/uglyfeed:latest .
 
       - name: Push Docker image
-        if: |
-          github.event_name == 'push' &&
-          github.ref == 'refs/heads/main' &&
-          !contains(github.event.head_commit.message, 'pylint') &&
-          !contains(github.event.head_commit.message, 'dependabot') &&
-          !contains(github.event.head_commit.message, 'CodeQL') &&
-          !contains(github.event.head_commit.message, 'chore') &&
-          !contains(github.event.head_commit.message, 'ci') &&
-          !contains(github.event.head_commit.message, '.md') &&
-          !contains(github.event.head_commit.message, '.txt')
+        env:
+          DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+          DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
         run: |
-          docker tag fabriziosalmi/uglyfeed:latest fabriziosalmi/uglyfeed:${{ env.VERSION }}
           echo $DOCKER_HUB_PASSWORD | docker login --username $DOCKER_HUB_USERNAME --password-stdin
+          docker tag fabriziosalmi/uglyfeed:latest fabriziosalmi/uglyfeed:${{ env.VERSION }}
           docker push fabriziosalmi/uglyfeed:${{ env.VERSION }}
           docker push fabriziosalmi/uglyfeed:latest
