--- a/config.yaml
+++ b/config.yaml
@@ -26,7 +26,7 @@ similarity_options:
 # API configuration settings (llm_processor.py)
 # Only one API configuration should be active at any time.
 api_config:
-  selected_api: "Groq"  # Active API can be "OpenAI", "Groq", or "Ollama"
+  selected_api: "Groq"  # Active API can be "OpenAI", "Groq", "Anthropic" or "Ollama"
 
   # Example configurations for different APIs:
 
@@ -40,6 +40,7 @@ api_config:
   groq_api_key: "your_groq_api_key"
   groq_model: "llama3-8b-8192"
 
+  # Anthropic API configuration
   # anthropic_api_key: "your_anthropic_api_key"
   # anthropic_api_url: "https://api.anthropic.com/v1/messages"
   # anthropic_model: "claude-3-haiku-20240307"
@@ -65,6 +66,8 @@ content_prefix: >
   Sintetizza le informazioni se necessario, mantenendo sempre la qualità e la rilevanza.
   Il contenuto generato deve essere in italiano.
 
+# TIP: If you just want rewritten content in specific language, just change the last word like this:
+# Il contenuto generato deve essere in [your language].
 
 #content_prefix: >
 #  As an expert journalist, use a professional, precise, and detailed tone. 
