feeds can now be pointed from config.yaml like this: `input_feeds_path: "input/feeds.txt"` , env vars and cli args added to main.py

--- a/config.yaml
+++ b/config.yaml
@@ -2,6 +2,9 @@
 # GitHub Repository: https://github.com/fabriziosalmi/UglyFeed
 # Documentation: https://github.com/fabriziosalmi/UglyFeed/docs
 
+# source feeds to process
+input_feeds_path: "input/feeds.txt"
+
 # Pre-processing source feeds
 similarity_threshold: 0.50  # Minimum similarity score to consider a match
 
