--- a/config.yaml
+++ b/config.yaml
@@ -101,3 +101,10 @@ github_repo: "your_github_username/uglyfeed-cdn"
 gitlab_repo: "your_gitlab_username/uglyfeed-cdn"
 enable_github: false  # Enable or disable GitHub deployment
 enable_gitlab: false  # Enable or disable GitLab deployment
+
+# TTS
+tts_input: "rewritten"
+tts_output: "media"
+tts_language: "it"
+speed_factor: 1.25
+enable_tts: false
