lost evening imports battle

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ nltk==3.8.1
 numpy==1.24.4
 openai==1.30.5
 pandas==2.2.2
+PyYAML==6.0.1
 psutil==5.9.8
 requests==2.32.3
 scikit_learn==1.4.2
@@ -21,7 +22,3 @@ tqdm==4.66.3
 typer==0.9.0
 streamlit
 schedule
-# gtts   temp removed while imports are fixed
-pydub
-python-dotenv
-pyyaml
