--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,9 @@ jobs:
         shell: bash
 
       - name: Install dependencies
-        run: pip install setuptools wheel twine
+        run: |
+          python -m pip install --upgrade pip
+          pip install setuptools wheel twine importlib_metadata
 
       - name: Build package
         run: python setup.py sdist bdist_wheel
@@ -39,6 +41,7 @@ jobs:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.TEST_PYPI_TOKEN }}
         run: |
+          twine check dist/*
           twine upload --repository-url https://test.pypi.org/legacy/ dist/* --verbose
 
       - name: Verify installation from Test PyPI
