--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --upgrade setuptools wheel twine importlib_metadata
+          pip install setuptools wheel twine importlib_metadata==4.8.1  # Use a specific version of importlib_metadata
 
       - name: Build package
         run: python setup.py sdist bdist_wheel
