--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,25 @@ jobs:
           echo "VERSION=$VERSION" >> $GITHUB_ENV
         shell: bash
 
+      - name: Get previous version
+        id: previous_version
+        run: |
+          PREV_VERSION=$(git log -p -1 setup.py | grep -oP '(?<=version=\").+?(?=\")')
+          echo "PREV_VERSION=${PREV_VERSION}" >> $GITHUB_ENV
+          echo "Previous version: ${PREV_VERSION}"
+
+      - name: Generate changelog
+        id: changelog
+        run: |
+          PREV_VERSION=${{ env.PREVIOUS_VERSION }}
+          CURRENT_VERSION=${{ env.VERSION }}
+          if [ -z "$PREV_VERSION" ]; then
+            PREV_VERSION=$(git log -1 --format=%H)
+          fi
+          echo "Generating changelog from $PREV_VERSION to $CURRENT_VERSION"
+          git log $PREV_VERSION..HEAD --pretty=format:"- %s" > changelog.txt
+          cat changelog.txt
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -64,8 +83,7 @@ jobs:
           release_name: Release ${{ env.VERSION }}
           body: |
             ## Changes in this Release
-            - Automatically generated release based on the following commit: ${{ github.sha }}
-            - Commit message: ${{ github.event.head_commit.message }}
+            ${{ steps.changelog.outputs.changelog }}
           draft: false
           prerelease: false
 
